# nngpr

./: .gitignore  CHANGELOG.md  README.md  benchmark.ipynb  pyproject.toml
datasets/: README.md
examples/: cuda_nngpr_example.py  cupy_nngpr_example.py  numpy_nngpr_example.py  torch_nngpr_example.py
nngpr/: __init__.py  base_nngpr.py  batched_kernels.py  cuda_kernel_accelerators.py  cuda_nngpr.py  cunngpr.py  cupy_nngpr.py  nngpr.py  numpy_nngpr.py  run_tests.py  torch_nngpr.py
nngpr/test/: nngpr_base_tester.py  test_cupy_nngpr.py  test_numpy_nngpr.py  test_torch_nngpr.py
test/: nngpr_base_tester.py  nngpr_tester.py  test_batched_kernels.py  test_cuda_nngpr.py  test_cunngpr.py  test_nngpr.py  test_numpy_nngpr.py  test_torch_nngpr.py
